# CineChromaticAI

./: README.md  app.py  emotion.py  pyproject.toml  script.py
attached_assets/: Pasted-import-os-import-json-import-cv2-import-numpy-as-np-import-pdfplumber-import-re-import-spacy--1739814076777.txt
static/css/: style.css
static/js/: main.js
templates/: index.html
uploads/: A_MILLION_MILES_AWAY.txt
